<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/constraint_layout_padding_activity_editor"
        tools:context=".EditorActivity">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/product_image_width_activity_editor"
            android:layout_height="@dimen/product_image_height_activity_editor"
            android:contentDescription="@null"
            android:padding="@dimen/product_image_padding_activity_editor"
            android:src="@drawable/add_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_product_name_activity_editor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_image">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_name"
                style="@style/EditorActivityLayoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name_activity_editor"
                android:inputType="textCapWords"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_price_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_product_price_activity_editor"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_price"
                style="@style/EditorActivityLayoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/hint_product_price_activity_editor"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_quantity_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_product_quantity_activity_editor"
            app:layout_constraintLeft_toRightOf="@id/product_price_text_input_layout"
            app:layout_constraintTop_toBottomOf="@id/product_name_text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_quantity"
                style="@style/EditorActivityLayoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/hint_product_quantity_activity_main"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_shipping"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_height_activity_editor"
            android:background="@drawable/spinner_background"
            android:contentDescription="@string/content_description_spinner_shipping_activity_editor"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/product_price_text_input_layout" />

        <Spinner
            android:id="@+id/spinner_stock"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_height_activity_editor"
            android:background="@drawable/spinner_background"
            android:contentDescription="@string/content_description_spinner_stock_activity_editor"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/spinner_shipping" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_name_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_supplier_name_activity_editor"
            app:layout_constraintTop_toBottomOf="@id/spinner_stock">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_name"
                style="@style/EditorActivityLayoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name_activity_editor"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_phone_number_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_supplier_phone_number_activity_editor"
            app:layout_constraintTop_toBottomOf="@id/supplier_name_text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_phone_number"
                style="@style/EditorActivityLayoutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:hint="@string/hint_supplier_phone_number_activity_editor"
                android:inputType="phone"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>


