<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:contentDescription="@null"
        android:layout_height="wrap_content"/>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_inventory_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_centerHorizontal="true"
            android:src="@drawable/inventory"/>

        <TextView
            android:id="@+id/empty_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_inventory_image_view"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_title_text"
            android:contentDescription="@string/content_description_empty_title_text_activity_main"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/empty_title_padding_top_activity_main"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/empty_subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text_view"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:text="@string/empty_subtitle_text"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/empty_subtitle_padding_top_activity_main"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_fab_text_activity_main"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin_activity_main"
        android:src="@drawable/ic_add_item" />
</RelativeLayout>

